Moving stuff around...

--- a/examples/jQuery.html
+++ b/examples/jQuery.html
@@ -2,9 +2,9 @@
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 		<!--// Normally you would not need to include all of these, you would just use a build //-->
-		<script src="../src/juan-validez-core.js"></script>
-		<script src="../src/juan-validez-rules-basic.js"></script>
-		<script src="../src/juan-validez-jquery.js"></script>
+		<script src="../src/core.js"></script>
+		<script src="../src/rules/basic.js"></script>
+		<script src="../src/ext/juan-validez-jquery.js"></script>
 		<script>
 			$( function () {
 				$( '#validate' ).click( function () { return $( 'input' ).validate(); } );
