--- a/examples/nojQuery.html
+++ b/examples/nojQuery.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<!--// Normally you would not need to include all of these, you would just use a build //-->
-		<script src="../src/juan-validez-core.js"></script>
-		<script src="../src/juan-validez-rules-basic.js"></script>
+		<script src="../src/core.js"></script>
+		<script src="../src/rules/basic.js"></script>
 		<style>
 			label { display: block; margin: 10px 0; }
 			input { display: block; }
@@ -20,7 +20,7 @@
 			<input type="text" id="password" />
 		</label>
 
-		<button id="validate">Validate</button>
+		<button id="validate">C'mon and Hit me with your Pop Ups!</button>
 
 		<script>
 
