Added comparators to the jQuery module and a new match rule.

--- a/examples/jQuery.html
+++ b/examples/jQuery.html
@@ -33,6 +33,11 @@
 			<input type="text" data-validates="required length:6" id="password" />
 		</label>
 
+		<label>
+			Password Again
+			<input type="text" data-validates="required length:6" data-compares="match:#password" id="password-again" />
+		</label>
+
 		<button id="validate">Validate</button>
 
 	</body>
